# euroleague_api

./: .gitignore  .pre-commit-config.yaml  LICENSE  LICENSE.md  LICENSE.txt  README.md  TEST_SUITE_SUMMARY.md  basic_test.py  mkdocs.yml  pylintrc  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  test_examples.py  test_runner.py
.github/: funding.yml
.github/workflows/: tests.yml
docs/euroleague_api/: EuroLeagueData.md  boxscore_data.md  game_metadata.md  game_stats.md  index.md  play_by_play_data.md  player_stats.md  schedule.md  shot_data.md  standings.md  team_stats.md  utils.md
notebooks/: get-new-format-seasons-stats.ipynb  get-season-stats.ipynb
site/euroleague_api/: EuroLeagueData.html  boxscore_data.html  game_metadata.html  game_stats.html  index.html  play_by_play_data.html  player_stats.html  schedule.html  shot_data.html  standings.html  team_stats.html  utils.html
src/: game_stats.py  player_stats.py  shot_data.py  standings.py  team_stats.py  utils.py
src/euroleague_api/: EuroLeagueData.py  __init__.py  boxscore_data.py  game_metadata.py  game_stats.py  play_by_play_data.py  play_by_play_data_with_referees.py  player_stats.py  schedule.py  shot_data.py  standings.py  team_lineup_euroleague_api.py  team_stats.py  utils.py
tests/: README.md  __init__.py  conftest.py  test_boxscore_data.py  test_euroleague_data.py  test_shot_data.py  test_utils.py
