[metadata]
name = euroleague_api
version = 0.0.1
author = Georgios Giasemidis
author_email = g.giasemidis@gmail.com
description = A Python wrapper of the Euroleague API
description-file = README.md
long_description = file: README.md
long_description_content_type = text/markdown
keywords = euroleague, api, basketball
url = https://github.com/giasemidis/euroleague_api
download_url = https://github.com/giasemidis/euroleague_api/archive/refs/tags/v0.0.2-alpha.tar.gz

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    requests
    pandas
    numpy

[options.packages.find]
where = src

exclude =
    notebooks*
